--- a/portfolio-step-1/index.html
+++ b/portfolio-step-1/index.html
@@ -15,7 +15,7 @@
 
     <section class="hero-image">
       <div class="container">
-        <h1 class="heading">Гнида Терминаторович</h1>
+        <h1 class="heading">Гнида Терминаторовичев</h1>
         <p>Junior верстальщик</p>
       </div>
     </section>
@@ -24,12 +24,10 @@
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
         <h3>Пара слов о себе</h3>
-        <p>По имени понятно, что я из себя прелставляю</p>
+        <p>По имени понятно, что я из себя представляю</p>
         <h3>Чем могу быть полезен</h3>
-        <p>
-          Могу вгонять людей в злость и бешенство, подрубая чсв на макс.
-          показатели
-        </p>
+        <p>Могу вгонять людей в злость и бешенство, подрубая чсв на макс.
+          показатели</p>
       </div>
     </section>
 
